@@ -775,8 +775,18 @@ INSERT INTO turq_inventory_accounting_types VALUES (5, 'Sell Special VAT', 'Sati
 INSERT INTO turq_inventory_accounting_types VALUES (6, 'Buy Discount', 'Alistan Inidirimler Hesabi');
 INSERT INTO turq_inventory_accounting_types VALUES (7, 'Sell Discount', 'Satistan Indirimler Hesabi');
 
-INSERT INTO turq_cheque_transaction_types VALUES (5, 'Bankadan Iade', 5, 3, 'admin', '2005-01-01', 'admin', '2005-01-01');
+
+
+ALTER TABLE turq_inventory_accounting_accounts 
+ADD CONSTRAINT prim_id PRIMARY KEY (id);
+ALTER TABLE turq_inventory_accounting_accounts 
+ADD CONSTRAINT uniq UNIQUE (inventory_cards_id, accounting_accounts_id, inventory_accounting_types_id);
+
+ALTER TABLE turq_inventory_accounting_types 
+ADD CONSTRAINT p_id PRIMARY KEY (id);
 
 INSERT INTO turq_bank_accounting_types VALUES (3, 'Karsiliksiz Cek Hesabi', ' ');
+INSERT INTO turq_cheque_transaction_types VALUES (5, 'Bankadan Iade', 5, 3, 'admin', '2005-01-01', 'admin', '2005-01-01');
+
 
 
